# taey-presence

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEFECTS_chat_and_env.md  README.md  pyproject.toml  requirements.txt
dashboard/: __init__.py  app.py  server.py
dashboard/static/: console.html  index.html
dcm/: README.md  cli_adapter.py  council.py  mesh.py  taey_adapter.py
docs/deployment/: known-limits.md  nccl-roce-recipe.md  nccl_synth_probe.py
presence/: __init__.py  dcm_presence.py  engine.py  prediction_worker.py
presence/dcm/: __init__.py  inter_instance.py  schema.cypher
presence/face/: __init__.py  expression.py
presence/interrupt/: __init__.py  interrupter.py
presence/prediction/: __init__.py  predictor.py
presence/retrieval/: __init__.py  backend.py
serving/: DEFECT_unbounded_tool_loop.md  SERVING.md  persona.example.md  soma_proxy.py  vllm_serve.sh
soma/: __init__.py  mira_soma.py  soma_daemon.py
tests/: test_taey_presence.py
validation/: capability_battery.py  methodology.md
validation/probes/: cannot_lie_probes.jsonl  structured_output_probes.jsonl
