[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taey-presence"
version = "0.2.0"
description = "Conversational-presence runtime for a local LLM: dynamic emoji face, type-time thought prediction, interrupts, memory prefetch, somatic telemetry, and a dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "redis>=5.0",
]

[project.optional-dependencies]
dcm = ["neo4j>=5.0"]

[tool.setuptools]
packages = ["presence", "soma", "dashboard"]
